update commit into partner.html

--- a/partner.html
+++ b/partner.html
@@ -217,6 +217,18 @@ $(document).ready(function () {
 <p>Andrew Maloney</p>
 <p>GitHub account username <strong>xazip</strong></p>
 </div>
+<div id="recent-update" class="section level2">
+<h2>Recent update:</h2>
+<div id="commit-4d225c33e66648cd682f883bd3fc9dbb36ff927c" class="section level3">
+<h3>commit 4d225c33e66648cd682f883bd3fc9dbb36ff927c</h3>
+</div>
+<div id="author-qinwen-yang-qinwenyiastate.edu" class="section level3">
+<h3>Author: Qinwen Yang <a href="mailto:qinweny@iastate.edu">qinweny@iastate.edu</a></h3>
+</div>
+<div id="date-thu-jan-24-141318-2019--0600" class="section level3">
+<h3>Date: Thu Jan 24 14:13:18 2019 -0600</h3>
+</div>
+</div>
 
 
 
